# ximea_opencv_quickstart

./: CMakeLists.txt  README.md
include/: xiApiPlusOcv.hpp
src/: main.cpp  xiApiPlusOcv.cpp
